--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="main_logo grid3">
           <img src="img/Main Logo.png" alt="Logo" />
         </div>
-        <div class="main_menu grid45" >
+        <div class="main_menu grid45">
           <button class="menu-toggle">Menu</button>
           <ul class="menu">
             <li>
@@ -278,59 +278,61 @@
       <!-- end contact -->
     </div>
     <!-- footer -->
-    <div id="footer">
-      <!-- site footer -->
-      <div id="footer1">
-        <div class="grid5 a1">
-          <img id="anhlogocuoi" src="img/Footer Logo.png" alt="" />
-          <p id="footer2">
-            <strong> Beautice</strong> is a Beauty Clinic WordPress Theme.
-          </p>
-          <p class="footer3">Baker Steet 101, NY, United States.</p>
-          <div id="diachilienlac">
-            <div>
-              <p>+521 569 8966.</p>
-            </div>
-            <div>
-              <p><u> mail@company.com.</u></p>
+    <div id="background_footer">
+      <div id="footer">
+        <!-- site footer -->
+        <div id="footer1">
+          <div class="grid5 a1">
+            <img id="anhlogocuoi" src="img/Footer Logo.png" alt="" />
+            <p id="footer2">
+              <strong> Beautice</strong> is a Beauty Clinic WordPress Theme.
+            </p>
+            <p class="footer3">Baker Steet 101, NY, United States.</p>
+            <div id="diachilienlac">
+              <div>
+                <p>+521 569 8966.</p>
+              </div>
+              <div>
+                <p><u> mail@company.com.</u></p>
+              </div>
             </div>
           </div>
+          <div class="grid2 a1">
+            <p class="abcd">Pages</p>
+            <ul class="ef">
+              <li><p>Home</p></li>
+              <li><p>About</p></li>
+              <li><p>Services</p></li>
+              <li><p>Gallery</p></li>
+              <li><p>Team</p></li>
+            </ul>
+          </div>
+          <div class="grid3 a1">
+            <p class="abcde">Informations</p>
+            <ul class="efg">
+              <li><p>Terms & conditions</p></li>
+              <li><p>Privacy policy</p></li>
+              <li><p>Blog</p></li>
+              <li><p>Contact</p></li>
+            </ul>
+          </div>
         </div>
-        <div class="grid2 a1">
-          <p class="abcd">Pages</p>
-          <ul class="ef">
-            <li><p>Home</p></li>
-            <li><p>About</p></li>
-            <li><p>Services</p></li>
-            <li><p>Gallery</p></li>
-            <li><p>Team</p></li>
-          </ul>
+        <div id="button_row">
+          <button id="bbbbb" onclick="scrollToTop()">
+            <img
+              src="img/ToTop Button.png"
+              alt="up"
+              style="width: 100%; height: auto"
+            />
+          </button>
         </div>
-        <div class="grid3 a1">
-          <p class="abcde">Informations</p>
-          <ul class="efg">
-            <li><p>Terms & conditions</p></li>
-            <li><p>Privacy policy</p></li>
-            <li><p>Blog</p></li>
-            <li><p>Contact</p></li>
-          </ul>
-        </div>
-      </div>
-      <div id="button_row">
-        <button id="bbbbb" onclick="scrollToTop()">
-          <img
-            src="img/ToTop Button.png"
-            alt="up"
-            style="width: 100%; height: auto"
-          />
-        </button>
-      </div>
-      <div id="end_footer">
-        <div class="grid5">
-          <img class="anhcuoi" src="img/Social Media.png" alt="" />
-        </div>
-        <div class="grid5">
-          <p id="aaaaa">&copy; AltDesain Studio 2021 - All right reserved.</p>
+        <div id="end_footer">
+          <div class="grid5">
+            <img class="anhcuoi" src="img/Social Media.png" alt="" />
+          </div>
+          <div class="grid5">
+            <p id="aaaaa">&copy; AltDesain Studio 2021 - All right reserved.</p>
+          </div>
         </div>
       </div>
     </div>
